adding LCD Core

--- a/AVRInterfacing/Debug/Makefile
+++ b/AVRInterfacing/Debug/Makefile
@@ -40,10 +40,12 @@ SUBDIRS :=  \
 ../APP/CFGH \
 ../HAL/Button \
 ../HAL/LED \
+../HAL/LCD \
 ../HAL/SevenSeg \
 ../LIB \
 ../HAL \
 ../MCAL \
+../MCAL/DIO \
 ../MCAL/PORT
 
 
@@ -52,8 +54,10 @@ C_SRCS +=  \
 ../APP/CFGH/MCAL_CFG/PORT_LCfg.c \
 ../APP/MAIN/main.c \
 ../HAL/Button/Button_Core.c \
+../HAL/LCD/LCD_Core.c \
 ../HAL/LED/LED_Core.c \
 ../HAL/SevenSeg/SevenSegment_Core.c \
+../MCAL/DIO/DIO_Core.c \
 ../MCAL/PORT/PORT_CORE.c
 
 
@@ -67,32 +71,40 @@ OBJS +=  \
 APP/CFGH/MCAL_CFG/PORT_LCfg.o \
 APP/MAIN/main.o \
 HAL/Button/Button_Core.o \
+HAL/LCD/LCD_Core.o \
 HAL/LED/LED_Core.o \
 HAL/SevenSeg/SevenSegment_Core.o \
+MCAL/DIO/DIO_Core.o \
 MCAL/PORT/PORT_CORE.o
 
 OBJS_AS_ARGS +=  \
 APP/CFGH/MCAL_CFG/PORT_LCfg.o \
 APP/MAIN/main.o \
 HAL/Button/Button_Core.o \
+HAL/LCD/LCD_Core.o \
 HAL/LED/LED_Core.o \
 HAL/SevenSeg/SevenSegment_Core.o \
+MCAL/DIO/DIO_Core.o \
 MCAL/PORT/PORT_CORE.o
 
 C_DEPS +=  \
 APP/CFGH/MCAL_CFG/PORT_LCfg.d \
 APP/MAIN/main.d \
 HAL/Button/Button_Core.d \
+HAL/LCD/LCD_Core.d \
 HAL/LED/LED_Core.d \
 HAL/SevenSeg/SevenSegment_Core.d \
+MCAL/DIO/DIO_Core.d \
 MCAL/PORT/PORT_CORE.d
 
 C_DEPS_AS_ARGS +=  \
 APP/CFGH/MCAL_CFG/PORT_LCfg.d \
 APP/MAIN/main.d \
 HAL/Button/Button_Core.d \
+HAL/LCD/LCD_Core.d \
 HAL/LED/LED_Core.d \
 HAL/SevenSeg/SevenSegment_Core.d \
+MCAL/DIO/DIO_Core.d \
 MCAL/PORT/PORT_CORE.d
 
 OUTPUT_FILE_PATH +=AVRInterfacing.elf
@@ -112,42 +124,56 @@ LINKER_SCRIPT_DEP+=
 APP/CFGH/MCAL_CFG/PORT_LCfg.o: ../APP/CFGH/MCAL_CFG/PORT_LCfg.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
 APP/MAIN/main.o: ../APP/MAIN/main.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
 HAL/Button/Button_Core.o: ../HAL/Button/Button_Core.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+HAL/LCD/LCD_Core.o: ../HAL/LCD/LCD_Core.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
 HAL/LED/LED_Core.o: ../HAL/LED/LED_Core.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
 HAL/SevenSeg/SevenSegment_Core.o: ../HAL/SevenSeg/SevenSegment_Core.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+MCAL/DIO/DIO_Core.o: ../MCAL/DIO/DIO_Core.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
 MCAL/PORT/PORT_CORE.o: ../MCAL/PORT/PORT_CORE.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include" -I"../APP/MAIN" -I"../APP/CFGH/HAL_CFG" -I"../APP/CFGH/MCAL_CFG" -I"../LIB" -I"../MCAL/PORT" -I"../HAL/Button" -I"../HAL/LED" -I"../HAL/SevenSeg" -I"../HAL/LCD" -I"../MCAL/DIO"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
